@@ -9,12 +9,12 @@ int fcntl(int fd, int cmd, ...{struct flock *lock});
 int getgrouplist(const char *user, gid_t group, gid_t *groups, int *ngroups);
 # we use "pathname" to avoid canonicalizing paths, because these functions are
 # unimplemented
-ssize_t getxattr(const char *pathname, const char *name, void *value, size_t size);
-ssize_t fgetxattr(int filedes, const char *name, void *value, size_t size);
-ssize_t listxattr(const char *pathname, char *list, size_t size);
-ssize_t flistxattr(int filedes, char *list, size_t size);
-int setxattr(const char *pathname, const char *name, const void *value, size_t size, int flags);
-int fsetxattr(int filedes, const char *name, const void *value, size_t size, int flags);
+ssize_t getxattr(const char *pathname, const char *name, void *value, size_t size, u_int32_t position, int options);
+ssize_t fgetxattr(int filedes, const char *name, void *value, size_t size, u_int32_t position, int options);
+ssize_t listxattr(const char *pathname, char *list, size_t size, int options);
+ssize_t flistxattr(int filedes, char *list, size_t size, int options);
+int setxattr(const char *pathname, const char *name, const void *value, size_t size, u_int32_t position, int options);
+int fsetxattr(int filedes, const char *name, const void *value, size_t size, u_int32_t position, int options);
 # local color UIDs
 int getgrouplist(const char *name, int basegid, int *groups, int *ngroups);
 int scandir(const char *path, struct dirent ***namelist, int (*filter)(struct dirent *), int (*compar)());
